[gd_scene load_steps=8 format=2]

[ext_resource path="res://CombatSystem/Battler/Animation/BattlerAnim.gd" type="Script" id=1]
[ext_resource path="res://CombatSystem/Battler/Animation/attack.anim" type="Animation" id=2]
[ext_resource path="res://CombatSystem/Battler/Animation/death.anim" type="Animation" id=3]
[ext_resource path="res://CombatSystem/Battler/Animation/take_damage.anim" type="Animation" id=4]
[ext_resource path="res://CombatSystem/Battler/Animation/appear.anim" type="Animation" id=5]

[sub_resource type="Animation" id=1]
resource_name = "_setup"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 2.46229 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.378929 ),
"update": 3,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "take_damage"
length = 0.85
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.35, 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.988235, 0.235294, 0.0352941, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="BattlerAnim" type="Position2D"]
scale = Vector2( -1, 1 )
script = ExtResource( 1 )

[node name="Pivot" type="Position2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot"]
autoplay = "_setup"
anims/_setup = SubResource( 1 )
anims/appear = ExtResource( 5 )
anims/attack = ExtResource( 2 )
anims/die = ExtResource( 3 )
anims/take_damage = ExtResource( 4 )

[node name="AnimationPlayerDamage" type="AnimationPlayer" parent="Pivot"]
anims/take_damage = SubResource( 2 )

[node name="FrontAnchor" type="Position2D" parent="."]
position = Vector2( -207.956, -132.72 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="TopAnchor" type="Position2D" parent="."]
position = Vector2( 0, -287.788 )
__meta__ = {
"_gizmo_extents_": 40.0
}

[node name="Tween" type="Tween" parent="."]
[connection signal="animation_finished" from="Pivot/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="Pivot/AnimationPlayerDamage" to="." method="_on_AnimationPlayer_animation_finished"]
